--- a/sunday-17-00/minesweeper/style.css
+++ b/sunday-17-00/minesweeper/style.css
@@ -7,5 +7,6 @@
     width: 30px;
     height: 30px;
     border: 3px solid white;
-    background-color: black;
+    background-color: rgb(80, 80, 80);
 }
+
