--- a/sunday-17-00/minesweeper/style.css
+++ b/sunday-17-00/minesweeper/style.css
@@ -1,12 +1,17 @@
 #board {
     display: grid;
-    grid-template-columns: 35px 35px 35px 35px 35px 35px 35px 35px;
+    grid-template-columns: repeat(8, 50px)
 }
   
 .closedField {
-    width: 30px;
-    height: 30px;
+    width: 45px;
+    height: 45px;
     border: 3px solid white;
     background-color: rgb(80, 80, 80);
+    margin: auto;
+    text-align: center;
 }
 
+.closedField {
+
+}
